--- a/Index.html
+++ b/Index.html
@@ -6,8 +6,8 @@
 	Gressya Estudio de Tatuajes
 	</title>
 	</center>
-	<link rel="shortcut icon" href="logo.png">
-	<link rel="stylesheet" href="CSS/estilo.css">
+	<link rel="shortcut icon" href="Logo.png">
+	<link rel="stylesheet" href="css/estilo.css">
 	</head>
 	<center>
 	<body>
