--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	</title>
 	</center>
 	<link rel="shortcut icon" href="logo.png">
-	<link rel="stylesheet" href="CSS/estilo.css">
+	<link rel="stylesheet" href="CSS/Estilo.css">
 	</head>
 	<center>
 	<body>
