--- a/html/servicios.html
+++ b/html/servicios.html
@@ -5,7 +5,7 @@
 			Servicios
 		</title>
 		<link rel="shortcut icon" href="../logo.png">
-		<link rel="stylesheet" href="../CSS/estilo.css">
+		<link rel="stylesheet" href="../css/Estilo.css">
 	</head>
 	<body>
 		<center>
@@ -16,7 +16,7 @@
 			</p>
 				<br> <br>
 				<div id="principal2">
-				<img src="../Imagenes/delogo.jpg" height="350" width="475">
+				<img src="../imagenes/delogo.jpg" height="350" width="475">
 				<br>
 <!-- Tablas de servicios -->
 					<p class="titulo">
@@ -26,7 +26,7 @@
 	
 			<a href="Cheyenne.html">
 			<div class="caja">
-				<img src="../Imagenes/Cheyenne1.png" height="275" width="275">
+				<img src="../imagenes/Cheyenne1.png" height="275" width="275">
 				<div class="caja-texto">
 					Cheyenne
 				</div>
@@ -37,7 +37,7 @@
 			</a>
 			<a href="maquina30d.html">
 			<div class="caja">
-				<img src="../Imagenes/maquina1.jpg" height="275" width="275"> 
+				<img src="../imagenes/maquina1.jpg" height="275" width="275"> 
 				<div class="caja-texto">
 				Maquina 3.0D	
 				</div>
@@ -48,7 +48,7 @@
 			</a>
 		<a href="Kit Personalizado de Maquinas.html">
 			<div class="caja">
-				<img src="../Imagenes/kit.jpg" height="275" width="275">
+				<img src="../imagenes/kit.jpg" height="275" width="275">
 				<div class="caja-texto">
 					Kit personalizado de Maquinas
 				</div>
@@ -64,7 +64,7 @@
 <!--border: Borde de la tabla bordercolor:Color del borde cellspacing:Espacio entre los bordes -->
 <a href="Tinta negra.html">
 				<div class="caja">
-				<img src="../Imagenes/tinta1.jpg" height="275" width="155">
+				<img src="../imagenes/tinta1.jpg" height="275" width="155">
 				<div class="caja-texto">
 					Tinta negra
 				</div>
@@ -86,7 +86,7 @@
 				</a>
 <a href="Tinta verde.html">				
 		<div class="caja">
-				<img src="../Imagenes/tinta3.jpg" height="275" width="155">
+				<img src="../imagenes/tinta3.jpg" height="275" width="155">
 				<div class="caja-texto">
 					Tinta verde
 				</div>
@@ -102,7 +102,7 @@
 				</p>
 				<a href="Diseños Varios.html">
 				<div class="caja">
-				<img src="../Imagenes/Imagenes1.jpg" height="275" width="275">
+				<img src="../imagenes/Imagenes1.jpg" height="275" width="275">
 				<div class="caja-texto">
 					DISEÑOS VARIOS
 				</div>
@@ -114,7 +114,7 @@
 			</a>
 			<a href="Tatuaje Tinta Roja.html">
 				<div class="caja">
-				<img src="../Imagenes/Diseñorojo1.jpg" height="275" width="275">
+				<img src="../imagenes/Diseñorojo1.jpg" height="275" width="275">
 				<div class="caja-texto">
 					Tatuaje Tinta Roja
 				</div>
@@ -125,7 +125,7 @@
 			</a>
 			<a href="Tatuaje Tinta Blanca.html">
 			<div class="caja">
-				<td> <img src="../Imagenes/tatuajesblancos1.jpg" height="275" width="275">
+				<td> <img src="../imagenes/tatuajesblancos1.jpg" height="275" width="275">
 				<div class="caja-texto">
 					Tatuaje Tinta Blanca
 				</div>
