--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		class="Marquesina">
 	</marquee>
 	</div>
-	<div id="Botones">
+	<div class="Botones">
 <a href="index.html">
 <img src="imagenes/inicio.png" class="Botones">
 </a>
